--- a/Game.CSharp.csproj
+++ b/Game.CSharp.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Assets\Scripts\FieldOfView.cs" />
     <Compile Include="Assets\Scripts\MouseControls.cs" />
     <Compile Include="Assets\Scripts\Movement\PhilMovement.cs" />
+    <Compile Include="Assets\Scripts\Movement\PickUpMovement.cs" />
     <Compile Include="Assets\Scripts\NewBehaviourScript.cs" />
     <Compile Include="Assets\Scripts\Path\EditorPath.cs" />
     <Compile Include="Assets\Scripts\Path\MoveonPath.cs" />
